update todos and extension properties

--- a/extension.properties
+++ b/extension.properties
@@ -1,5 +1,5 @@
 name=@extname@
-description=The extension description can be customized by editing the extension.properties file.
-author=Thog
+description=Nvidia Falcon ISA extension.
+author=Thog, hthh
 createdOn=
 version=@extversion@
