Fix build for new version of Ghidra

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ version = 1.0
 
 task sleighCompile(type: JavaExec) {
     main = "ghidra.pcodeCPort.slgh_compile.SleighCompile"
-    classpath = configurations.compile
+    classpath = sourceSets.main.runtimeClasspath
     jvmArgs = ['-Xmx2048M']
     args = ['-a', 'data/languages']
 }
@@ -46,31 +46,7 @@ task distClean(type: Delete) {
 clean.dependsOn(sleighClean)
 clean.dependsOn(distClean)
 
-task buildExtension (type: Zip, overwrite: true, dependsOn: 'sleighCompile') {
-    baseName "${project.name}-${project.version}"
-    extension 'zip'
-    destinationDir DISTRIBUTION_DIR
-	version ''
-
-	duplicatesStrategy 'exclude'
-
-    File propFile = new File(project.projectDir, "extension.properties")
-    from (propFile) {
-        String version = "${ghidra_version}"
-        String name = "${project.name}"
-        filter (ReplaceTokens, tokens: [extversion: version])
-        filter (ReplaceTokens, tokens: [extname: name])
-        into PATH_IN_ZIP
-	}
-
-    from (project.projectDir) {
-		include 'data/languages/**'
-		include 'LICENSE.txt'
-		include 'extension.properties'
-
-		// MANDATORY
-		include 'Module.manifest'
-
-        into PATH_IN_ZIP
-	}
+buildExtension {
+    baseName "${project.name}-${project.version}-Ghidra_${ghidra_version}".replace(' ', '_')
+    dependsOn sleighCompile
 }
