--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,10 @@ jobs:
           gradle-version: current
           arguments: -PGHIDRA_INSTALL_DIR=${{ env.GHIDRA_INSTALL_DIR }}
 
-      - uses: svenstaro/upload-release-action@v1-release
+      - uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: dist/ghidra_falcon-*.zip
           tag: 'master'
           overwrite: true
-          prerelease: true
           file_glob: true
