--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,75 @@
 name: CI
 
-on:
-  workflow_dispatch:
-    inputs: {}
-  push:
-    branches: [ master ]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  build_and_publish:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ghidra: ["10.1.1" ]
+        ghidra:
+          - "11.0"
+          - "10.4"
+          - "10.3.3"
+          - "10.3.2"
+          - "10.3.1"
+          - "10.3"
+          - "10.2.3"
+          - "10.2.2"
+          - "10.2.1"
+          - "10.2"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: "11"
-          java-package: jdk
-          architecture: x64
+          java-version: '17'
 
-      - uses: er28-0652/setup-ghidra@master
+      - uses: gradle/gradle-build-action@v2.11.1
+
+      - uses: antoniovazquezblanco/setup-ghidra@v1.2.0
         with:
+          auth_token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ matrix.ghidra }}
 
-      - uses: eskatos/gradle-command-action@v1
-        with:
-          gradle-version: current
-          arguments: -PGHIDRA_INSTALL_DIR=${{ env.GHIDRA_INSTALL_DIR }}
+      - name: Build extension
+        run: gradle -PGHIDRA_INSTALL_DIR=${{ env.GHIDRA_INSTALL_DIR }}
 
-      - uses: svenstaro/upload-release-action@v2
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist/ghidra_falcon-*.zip
-          tag: 'master'
-          overwrite: true
-          file_glob: true
+          name: Falcon for Ghidra ${{ matrix.ghidra }}
+          path: dist/ghidra_*.zip
+          if-no-files-found: error
+
+  release:
+    runs-on: "ubuntu-latest"
+    needs: build
+
+    steps:
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+    
+    - name: Download binaries
+      uses: actions/download-artifact@v4
+
+    - name: Release nightly
+      if: github.ref == 'refs/heads/master'
+      uses: marvinpinto/action-automatic-releases@v1.2.1
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
+        prerelease: true
+        title: "Ghidra Falcon Nightly (${{steps.date.outputs.date}})"
+        files: Falcon*/*.zip
+
+    - name: Release stable
+      if: contains(github.ref, 'refs/tags/v')
+      uses: marvinpinto/action-automatic-releases@v1.2.1
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: false
+        title: "Ghidra Falcon ${{github.ref_name}}"
+        files: Falcon*/*.zip
