Update nickname and mailmap
As the mapping should be like that.

Signed-off-by: Mary Guillemard <mary@mary.zone>

--- a/extension.properties
+++ b/extension.properties
@@ -1,5 +1,5 @@
 name=@extname@
 description=Nvidia Falcon ISA extension.
-author=Thog, hthh
+author=marysaka, hthh
 createdOn=
 version=@extversion@
