Make sure to checkout source when handling nightly release
Signed-off-by: Mary Guillemard <mary@mary.zone>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,10 @@ jobs:
     - name: Download binaries
       uses: actions/download-artifact@v4
 
+    - name: Checkout source for nightly release removal
+      uses: actions/checkout@v4
+      if: github.ref == 'refs/heads/master'
+
     - name: Remove previous nightly release
       if: github.ref == 'refs/heads/master'
       run: |
