Use gh instead of hub for release delete
hub isn't in Github Actions runner images anymore.

Signed-off-by: Mary Guillemard <mary@mary.zone>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
       if: github.ref == 'refs/heads/master'
       run: |
         git fetch --tags
-        hub release delete latest
+        gh release delete latest -y || true
         git push --delete origin latest
 
     - name: Release nightly
