--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         git fetch --tags
         gh release delete latest -y || true
-        git push --delete origin latest
+        git push --delete origin latest || true
 
     - name: Download binaries
       uses: actions/download-artifact@v4
